--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,17 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@font-face {
+  font-family: 'Kalpurush';
+  src: url('/public/bkash.svg') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Kalpurush';
+  src: url('/public/kalpurush\ ANSI\ \(1\).ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
